step_3_0/kubernetes/service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: eleven
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    nodePort: 30061
  type: LoadBalancer
